k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: common-ingress
spec:
  rules:
    - host: app-python
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-python
                port:
                  number: 80
    - host: app-rust
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-rust
                port:
                  number: 80
